navigation and function added

--- a/index.html
+++ b/index.html
@@ -24,20 +24,19 @@
     <header id="main-header">
         <h1 class="main-title">Flickr API Photo Feed</h1>
         <div class="wrapper">
-          <nav id="main-nav">
-            <ul>
-              <li><a href="">Flickr</a></li>
-              <li><a href="">Spotify</a></li>
-            </ul>
-          </nav>
+            <nav id="main-nav">
+                <ul>
+                    <li><a href="" class="flickr-link">Flickr</a></li>
+                    <li><a href="" class="spotify-link">Spotify</a></li>
+                </ul>
+            </nav>
         </div>
-      <!-- End of .wrapper -->
+        <!-- End of .wrapper -->
         <!-- End of #main-nav -->
     </header>
     <!-- End of header -->
-    <hr class="style-four" />
-    <div class="wrapper">
-        <main id="main-content">
+    <main id="main-content" class="main flickr-main">
+        <div class="wrapper">
             <!-- PHOTO GROUP OF (4) 1 -->
             <div class="container">
                 <div id="contentRow" class="row">
@@ -100,11 +99,12 @@
                 <!-- End of .row -->
             </div>
             <!-- End of .container -->
-        </main>
-        <!-- End of #main-content -->
+        </div>
+        <!-- End of .Wrapper -->
+    </main>
+    <!-- End of #main-content -->
 
-    </div>
-    <!-- End of .Wrapper -->
+
 
     <!-- SCRIPTS -->
 
