--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/plugin/lightbox/lightbox.min.js"></script>
     <!--  The MIT License (MIT)
 
+Lightbox2 Plugin copyright.
 Copyright (c) 2015 Lokesh Dhakar
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -58,9 +59,19 @@ SOFTWARE. -->
     <!-- End of header -->
     <main id="main-content" class="main flickr-main">
         <div class="wrapper">
-            <!-- PHOTO GROUP OF (4) 1 -->
+          <!-- Search Bar and Filter -->
+            <div class="container">
+              <div class="row">
+                <input type="search" id="#searchApi" name="searchApi" />
+              </div>
+              <!-- .row -->
+            </div>
+            <!-- .container -->
+
+              <!-- PHOTO GROUP OF (4) 1 -->
             <div class="container">
                 <div id="contentRow" class="row">
+                  <!-- Placeholder imgs, will appear if JavaScript doesn't load. On load jQuery AJAX requests data from Flickr & Spotify API and replaces gallery with Pictures and Albums from the API's -->
 
                     <div class="img-box sm-col-50 md-col-1-3">
                         <a href="img/01.jpg" data-lightbox="image-1" data-title="Photo-1">
