--- a/index.html
+++ b/index.html
@@ -29,14 +29,7 @@ furnished to do so, subject to the following conditions:
 
 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE. -->
+ -->
     <script src="js/app.js"></script>
 
 </head>
@@ -59,19 +52,26 @@ SOFTWARE. -->
     <!-- End of header -->
     <main id="main-content" class="main flickr-main">
         <div class="wrapper">
-          <!-- Search Bar and Filter -->
+            <!-- Search Bar and Filter -->
             <div class="container">
-              <div class="row">
-                <input type="search" id="#searchApi" name="searchApi" />
-              </div>
-              <!-- .row -->
+                <div class="row search-filter-row flex-row">
+                    <div class="search-container">
+                        <input type="search" id="searchApi" name="searchApi" placeholder="Search" />
+                        <button type="submit" id="flickrSubmitBtn" name="submitBtn">Search</button>
+                    </div>
+                    <!-- BUTTON TYPE ???? -->
+                    <button class="btn-filter" type="" id="sortDate" name="sortDate">Sort Date</button>
+                    <button class="btn-filter" type="" id="filter" name="filter">Filter</button>
+
+                </div>
+                <!-- .row -->
             </div>
             <!-- .container -->
 
-              <!-- PHOTO GROUP OF (4) 1 -->
+            <!-- PHOTO GROUP OF (4) 1 -->
             <div class="container">
                 <div id="contentRow" class="row">
-                  <!-- Placeholder imgs, will appear if JavaScript doesn't load. On load jQuery AJAX requests data from Flickr & Spotify API and replaces gallery with Pictures and Albums from the API's -->
+                    <!-- Placeholder imgs, will appear if JavaScript doesn't load. On load jQuery AJAX requests data from Flickr & Spotify API and replaces gallery with Pictures and Albums from the API's -->
 
                     <div class="img-box sm-col-50 md-col-1-3">
                         <a href="img/01.jpg" data-lightbox="image-1" data-title="Photo-1">
