--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ copies or substantial portions of the Software.
                 <div class="row search-filter-row flex-row">
                     <div class="search-container">
                         <input type="search" id="searchApi" name="searchApi" placeholder="Search" />
-                        <button type="submit" id="flickrSubmitBtn" name="submitBtn">Search</button>
+                        <button type="submit" id="flickrSearchBtn" name="submitBtn">Search</button>
                     </div>
                     <!-- BUTTON TYPE ???? -->
-                    <button class="btn-filter" type="" id="sortDate" name="sortDate">Sort Date</button>
-                    <button class="btn-filter" type="" id="filter" name="filter">Filter</button>
+                    <button class="btn-filter btn-sort-1" type="" id="sortDate" name="sortDate">Sort Date</button>
+                    <button class="btn-filter btn-sort-2" type="" id="sortTitle" name="sortTitle">Sort Title</button>
 
                 </div>
                 <!-- .row -->
@@ -74,55 +74,55 @@ copies or substantial portions of the Software.
                     <!-- Placeholder imgs, will appear if JavaScript doesn't load. On load jQuery AJAX requests data from Flickr & Spotify API and replaces gallery with Pictures and Albums from the API's -->
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/01.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/01.jpg" data-name="02" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/01.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/02.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/02.jpg" data-name="01" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/02.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/03.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/03.jpg" data-name="05" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/03.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/04.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/04.jpg" data-name="06" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/04.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/05.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/05.jpg" data-name="08" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/05.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/06.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/06.jpg" data-name="09" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/06.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/07.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/07.jpg" data-name="07" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/07.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/08.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/08.jpg" data-name="04" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/08.jpg" alt="photograph" />
                         </a>
                     </div>
 
                     <div class="img-box sm-col-50 md-col-1-3">
-                        <a href="img/09.jpg" data-lightbox="image-1" data-title="Photo-1">
+                        <a href="img/09.jpg" data-name="03" data-lightbox="image-1" data-title="Photo-1">
                             <img src="img/thumbnails/09.jpg" alt="photograph" />
                         </a>
                     </div>
