Page Layout restyled

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- AJAX Request -->
     <script src="js/lib/jquery-3.1.1.min.js"></script>
     <script src="js/plugin/lightbox/lightbox.min.js"></script>
+    <script src="js/app.js"></script>
     <!--  The MIT License (MIT)
 
 Lightbox2 Plugin copyright.
@@ -30,8 +31,6 @@ furnished to do so, subject to the following conditions:
 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.
  -->
-    <script src="js/app.js"></script>
-
 </head>
 
 <body>
@@ -53,7 +52,7 @@ copies or substantial portions of the Software.
     </header>
     <!-- End of header -->
     <main id="main-content" class="main flickr-main">
-        <div class="wrapper main-wrapper">
+        <div id="mainContentWrapper" class="wrapper main-wrapper flickr-inner">
             <!-- Search Bar and Filter -->
             <div class="container">
                 <div class="row search-filter-row flex-row">
