--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@ copies or substantial portions of the Software.
             <!-- .container -->
 
             <!-- PHOTO GROUP OF (4) 1 -->
-            <div class="container">
+            <section class="container">
                 <div id="contentRow" class="row">
+                  <h2 aria-hidden="true" class="texthidden heading-two">Photo Gallery</h2>
                     <!-- Placeholder imgs, will appear if JavaScript doesn't load. On load jQuery AJAX requests data from Flickr & Spotify API and replaces gallery with Pictures and Albums from the API's -->
 
                     <div class="img-box sm-col-50 md-col-1-3">
@@ -130,7 +131,7 @@ copies or substantial portions of the Software.
 
                 </div>
                 <!-- End of .row -->
-            </div>
+            </section>
             <!-- End of .container -->
         </div>
         <!-- End of .Wrapper -->
