Adjustment to styles

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ copies or substantial portions of the Software.
             <!-- PHOTO GROUP OF (4) 1 -->
             <section class="container">
                 <div id="contentRow" class="row">
-                  <h2 aria-hidden="true" class="texthidden heading-two">Photo Gallery</h2>
+                  <!-- <h2 aria-hidden="true" class="texthidden heading-two">Photo Gallery</h2> -->
                     <!-- Placeholder imgs, will appear if JavaScript doesn't load. On load jQuery AJAX requests data from Flickr & Spotify API and replaces gallery with Pictures and Albums from the API's -->
 
                     <div class="img-box sm-col-50 md-col-1-3">
@@ -128,7 +128,6 @@ copies or substantial portions of the Software.
                             <img src="img/thumbnails/09.jpg" alt="photograph" />
                         </a>
                     </div>
-
                 </div>
                 <!-- End of .row -->
             </section>
@@ -137,7 +136,5 @@ copies or substantial portions of the Software.
         <!-- End of .Wrapper -->
     </main>
     <!-- End of #main-content -->
-
 </body>
-
 </html>
